syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.naren.monitoring";
option java_outer_classname = "Mon";
package naren;


service MetricService {
  rpc Metric (MetricRequest) returns (MetricResponse) {}
}
message MetricRequest {
  string name = 1;
}
message MetricResponse {
	repeated MetricFamily metricFamily = 1;
}
message MetricFamily {
	MetaData metaData	=	1;
	repeated Sample sample	=	2;
}
message MetaData {
	string	nameSpace	= 	1;
	string	subSystem	=	2;
	string	name		= 	3;  
	string	help		= 	4;
	MetricType	type	=	5;
	repeated string labelName 	= 6;
	
}
message Sample {
	repeated	string labelValue 	= 1;
	double	value					= 2;
	int64	timestamp_ms			= 3;
}

enum MetricType {
  COUNTER    = 0;
  GAUGE      = 1;
  SUMMARY    = 2;
  UNTYPED    = 3;
  HISTOGRAM  = 4;
}











